web-infras/parser/tests/fixtures/esprima/ES6/arrow-function/invalid-duplicated-params/output.txt
[SyntaxError]: duplicate params (1,5)
1|(x, x) => y;
 |   ^
